apps/web/overseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      labels:
        app: overseerr

    spec:
      containers:
      - name: overseerr
        # https://github.com/linuxserver/docker-overseerr/releases/latest
        image: lscr.io/linuxserver/overseerr:v1.34.0-ls154
        # securityContext:
        #   runAsNonRoot: true
        #   runAsUser: 1000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "4Gi"
            cpu: "6000m"
        ports:
        - containerPort: 5055
        volumeMounts:
        - name: overseerr-config
          mountPath: /config
      volumes:
      - name: overseerr-config
        hostPath:
          path: /lxc-configs/overseerr-config # This path contains the same files on all nodes 
          type: DirectoryOrCreate
